CRUD for movies

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -39,7 +39,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/movies">Movies</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
@@ -75,6 +75,8 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/restangular/dist/restangular.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -82,6 +84,11 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/movies.js"></script>
+        <script src="scripts/controllers/movie-add.js"></script>
+        <script src="scripts/controllers/movie-view.js"></script>
+        <script src="scripts/controllers/movie-delete.js"></script>
+        <script src="scripts/controllers/movie-edit.js"></script>
         <!-- endbuild -->
 </body>
 </html>
